--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,92 @@
 
+/* Object */
+/* {"Snow":"f4eded","Celadon":"a1ceab","Pale Dogwood":"c7b2a8","Payne's gray":"326273","Caramel":"ce8147"} */
 
-.player-container {
+body {
+	background-color: #C7B2A8;
+}
+
+.play-space {
+	/* display: flex; */
+	/* justify-content: center; */
+	border: 1px solid black;
+}
+
+.action-area {
   display: flex;
   flex-direction: column;
   align-items: space-around;   
   justify-content: flex-start;
   width: 1000px;
-  height: 200px;
-  background-color: lightgray;
-  margin: 10px;
+  height: 100px;
+  margin: 10px auto;
+  margin-bottom: 1px;
+  padding: 10px;
+  background-color: #A1CEAB;
+  border: 2px solid blue;
+}
+
+.actor-container {
+  display: flex;
+  flex-direction: column;
+  align-items: space-around;   
+  justify-content: flex-start;
+  width: 1000px;
+  /* height: 200px; */
+  margin: 10px auto;
+  padding: 10px;
+}
+
+.player-container {
+  background-color: #A1CEAB;
+  border: 2px solid blue;
+  margin-top: 0;
 }
 
 .opponent-container {
-  display: flex;
-  flex-direction: column;
-  align-items: space-around;   
-  justify-content: flex-start;
-  width: 1000px;
-  height: 200px;
-  background-color: lightgray;
-  margin: 10px;
+  background-color: #BCDCC3;
+  border: 1px solid blue;
 }
 
-.hand-container {
+.tile-container {
 	flex: 1;
+	/* padding-left: 5px; */
+	border: 1px solid red;
 }
 
 .discard-container {
-	flex: 1;
 	text-align: right;
+	grid-row: span 2;
 }
 
 .tile-img{
   width: 30px;
   height: 40px;
   border: 1px solid black;
-  background-color: white;
+  background-color: #f4eded;
+  margin: 1px;
+  border-radius: 4px;
+  /* cursor: pointer; */
 }
 
+.selected {
+	border: 3px #ce8147;
+}
+
+#tile-arrow {
+	position: absolute; /* not relative?? */
+	display: none;
+	pointer-events: none;
+}
+
+.arrow {
+	width: 20px;
+    /* Style for the floating arrow */
+}
+
+
 /*
-.opponent-info {
+.actor-info {
   display: flex;
   margin-bottom: 10px;
   font-weight: bold;
@@ -49,16 +96,27 @@
 	display: flex;
 }
 
-.opponent-name {
+.actor-grid{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	/* grid-template-rows: 1fr 1fr; */
+	grid-auto-rows: minmax(60px, auto);
+	gap: 3px;
+	margin-top: 10px;
+	
+}
+
+
+.actor-name {
   flex: 1;
 }
 
-.opponent-wind {
+.actor-wind {
   flex: 1;
   text-align: center;
 }
 
-.opponent-points {
+.actor-points {
   flex: 1;
   text-align: right;
 }
