--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,11 @@
 /* Object */
 /* {"Snow":"f4eded","Celadon":"a1ceab","Pale Dogwood":"c7b2a8","Payne's gray":"326273","Caramel":"ce8147"} */
 
+
+/* * {    border: 1px solid red;} */
+
 body {
-	background-color: #C7B2A8;
+	background-color: #03031A;
 }
 
 .play-space {
@@ -14,16 +17,45 @@ body {
 
 .action-area {
   display: flex;
-  flex-direction: column;
-  align-items: space-around;   
-  justify-content: flex-start;
+  /* flex-direction: row; */
+  align-items: center;   
+  justify-content: space-between;
   width: 1000px;
-  height: 100px;
-  margin: 10px auto;
-  margin-bottom: 1px;
+  /* height: 200px; */
+  margin: 6px auto;
+  /* margin-bottom: 4px; */
   padding: 10px;
-  background-color: #A1CEAB;
-  border: 2px solid blue;
+  color: white;
+  /* background-color: #7FB4C7; */
+  /* border: 1px solid red; */
+}
+
+#left-panel {
+	flex: 1;
+}
+
+#center-panel {
+	flex: 1;
+	/* position: absolute; */
+	/* left: 50%; */
+	/* transform: translateX(20%); */
+	/* width: 200px; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+#button-row {
+	justify-content: space-between;
+	width: 200px;
+}
+
+#right-panel {
+	flex: 1;
+	align-self: stretch;
+	flex-direction: column;
+	display: flex;
+	justify-content: flex-end;
 }
 
 .actor-container {
@@ -33,25 +65,32 @@ body {
   justify-content: flex-start;
   width: 1000px;
   /* height: 200px; */
-  margin: 10px auto;
-  padding: 10px;
+  margin: 6px auto;
+  padding: 8px;
+  background-color: #A1CEAB;
+  border-radius: 6px;
 }
 
 .player-container {
-  background-color: #A1CEAB;
-  border: 2px solid blue;
+  /* background-color: #A1CEAB; */
+  /* border: 2px solid blue; */
   margin-top: 0;
 }
 
 .opponent-container {
-  background-color: #BCDCC3;
-  border: 1px solid blue;
+  /* background-color: #BCDCC3; */
+  /* border: 1px solid blue; */
+}
+
+.active-container {
+	/* border: 3px solid #326273; */
+	background-color: #54A065;
 }
 
 .tile-container {
 	flex: 1;
 	/* padding-left: 5px; */
-	border: 1px solid red;
+	/* border: 1px solid red; */
 }
 
 .discard-container {
@@ -61,16 +100,41 @@ body {
 
 .tile-img{
   width: 30px;
-  height: 40px;
-  border: 1px solid black;
+  height: 43px;
+  /* border: 1px solid black; */
   background-color: #f4eded;
-  margin: 1px;
+  padding: 2px;
+  margin: 2px;
   border-radius: 4px;
   /* cursor: pointer; */
 }
 
+.round-wind{
+	flex: 1;
+	width: 40px;
+	height: 40px;
+	border: 5px solid red;
+	border-radius: 50%;
+	background-color: #f4eded;
+}
+
+.actor-wind-img{
+	width: 30px;
+	height: 30px;
+	padding: 1px;
+	/* background-color: #94C79F; */
+	border: 2px solid #777777;
+	border-radius: 40%;
+}
+
+.actor-wind-dealer{
+	background-color: #E1C477;
+	/* border: 3px solid #326273; */
+
+}
+
 .selected {
-	border: 3px #ce8147;
+	border: 3px solid #ce8147;
 }
 
 #tile-arrow {
@@ -109,11 +173,12 @@ body {
 
 .actor-name {
   flex: 1;
+  text-align: center;
 }
 
 .actor-wind {
   flex: 1;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .actor-points {
